Bug 402547 - Unable to save data to database in presence of online jobs
Summary: Unable to save data to database in presence of online jobs
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: database (other bugs)
Version First Reported In: 5.0.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-25 07:50 UTC by Thomas Baumgart
Modified: 2019-01-26 19:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2018-12-25 07:50:52 UTC
SUMMARY
The title says it all

STEPS TO REPRODUCE
1. Open database which contains online jobs
2. Change something
3. Save the data to the database

OBSERVED RESULT
Error message pops up: Could not save onlineJob. /home/thb/devel/kmymoney/kmymoney/plugins/sql/mymoneystoragesql_p.h:914

EXPECTED RESULT
Data is saved to database w/o error.
Comment 1 Thomas Baumgart 2018-12-25 19:35:38 UTC
Git commit 804203bab3c51d0d31a169e33f1d0ba47ab64da3 by Thomas Baumgart.
Committed on 25/12/2018 at 19:28.
Pushed by tbaumgart into branch '5.0'.

Clear database table before refilling it
FIXED-IN: 5.0.3

M  +21   -1    kmymoney/plugins/sql/mymoneystoragesql_p.h

https://commits.kde.org/kmymoney/804203bab3c51d0d31a169e33f1d0ba47ab64da3