Clear database table before refilling it

BUG: 402547
FIXED-IN: 5.0.3